Updated width for adaptive cards button

--- a/src/components/general/AdaptiveCardViewer/styles.less
+++ b/src/components/general/AdaptiveCardViewer/styles.less
@@ -16,7 +16,8 @@
         align-items: center;
         background-color: var(--color-primary);
         height: calc(var(--grid-unit) * 4.5px);
-        width: calc(var(--grid-unit) * 9.5px);
+        min-width: calc(var(--grid-unit) * 9.5px);
+        max-width: calc(var(--grid-unit) * 20px);
         color: var(--color-white);
         cursor: pointer;
 
