Added person presence icon

--- a/src/components/people/PersonPhoto/styles.less
+++ b/src/components/people/PersonPhoto/styles.less
@@ -123,4 +123,72 @@
             }
         }
     }
+
+    .presenceContainer {
+        border-radius: 50%;
+        position: absolute;
+        bottom: 0;
+        right: calc(var(--grid-unit) * 1.5px);
+        width: var(--presenceContainerSize);
+        height: var(--presenceContainerSize);
+        color: var(--color-white);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        &.available {
+            background: var(--color-green);
+        }
+    
+        &.away {
+            background: var(--color-yellow);
+        } 
+        
+        &.doNotDisturb, &.busy{
+            background: var(--color-danger);
+        }
+
+        &.offline {
+            background: var(--color-black-alt3);
+        }
+
+
+        &.xlarge {
+            &.comfortable, &.compact {
+                // 24x24
+                --presenceContainerSize: calc(var(--grid-unit) * 2px);
+            }
+        }
+    
+        &.large {
+            &.comfortable, &.compact {
+                // 16x16
+                --presenceContainerSize: calc(var(--grid-unit) * 1px);
+            }
+        }
+
+        &.medium {
+            &.comfortable {
+                // 16x16
+                --presenceContainerSize: calc(var(--grid-unit) * 1px);
+            }
+
+            &.compact {
+                // 12x12
+                --presenceContainerSize: calc(var(--grid-unit) * 0.75px);
+            }
+        }
+    
+        &.small {
+            &.comfortable {
+                // 12x12
+                --presenceContainerSize: calc(var(--grid-unit) * 0.75px);
+            }
+    
+            &.compact {
+                // 8x8
+                --presenceContainerSize: calc(var(--grid-unit) * 0.5px);
+            }
+        }
+    }
 }
