Added pointer events all so the container could be detected by elementsFromPoint

--- a/src/hooks/useTooltipRef/styles.less
+++ b/src/hooks/useTooltipRef/styles.less
@@ -8,6 +8,7 @@
     padding: calc(var(--grid-unit) * 1px);
     border-radius: 1px;
     overflow: visible;
+    pointer-events: all;
 
     .content {
         white-space: nowrap;
