--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -68,16 +68,22 @@
             }
         }
 
-        .expandedContent {
+        .expandedContent {            
             grid-column-start: 1;
             grid-column-end: -1;
+            max-width: fit-content;
             padding: calc(var(--grid-unit) * var(--expanded-content-padding-multiplier));
             border-bottom: 1px solid var(--border-color);
 
             td {
                 height: calc(var(--grid-unit) * var(--expanded-content-row-height-multiplier));
             }
+        
+            .expandedLabel {
+             white-space: nowrap;
+            }
         }
+
     }
 
     .pagination {
