--- a/src/components/feedback/NotificationCards/styles.less
+++ b/src/components/feedback/NotificationCards/styles.less
@@ -14,7 +14,7 @@
     padding: calc(var(--grid-unit) * 1px);
     justify-content: flex-start;
     scroll-behavior: smooth;
-
+    
     &::-webkit-scrollbar {
         display: none;
     }
@@ -52,14 +52,17 @@
 
     .notificationWrapper {
         border-radius: 4px;
-        opacity: 0;
-        transition: opacity .5s;
+        transition: transform .3s ease, opacity .6s;
         margin-bottom: calc(var(--grid-unit) * 2px);
         border-collapse: separate; 
         background-color: var(--color-white);
-    
+        transform: translateX(calc(var(--notifications-width) * 1.1));
+        -webkit-transform: translateX(calc(var(--notifications-width) * 1.1));
+        opacity: 0;
     
         &.isVisible{
+            transform: translateX(0px);
+            -webkit-transform: translateX(0px);
             opacity: 1;
         }
     }
