--- a/src/components/general/NotificationsSideSheet/styles.less
+++ b/src/components/general/NotificationsSideSheet/styles.less
@@ -3,28 +3,33 @@
     flex-direction: column;
     padding: 0 calc(var(--grid-unit) * 2px);
 
-    .markAllAsReadButton {
-        padding: calc(var(--grid-unit) * 2px) 0;
-    }
+
     .notifications{ 
         display: flex;
         flex-direction: column;
 
-            .division{
-                padding-top: calc(var(--grid-unit) * 2px);
+        .divisionTitle {
+            padding-left: calc(var(--grid-unit) * 1px);
+        }
 
-                .dateMarker {
-                    width: 100%;
-                    display: flex;
-                    justify-content: flex-end;
-                    padding: calc(var(--grid-unit) * 1px) 0;
-                    font-size: 12px;
-                    color: var(--color-black-alt2);
-                }
+        .division{
+            padding-top: calc(var(--grid-unit) * 2px);
+
+            .dateMarker {
+                width: 100%;
+                display: flex;
+                justify-content: flex-end;
+                padding: calc(var(--grid-unit) * 1px) 0;
+                font-size: 12px;
+                color: var(--color-black-alt2);
             }
+        }
        
     }
     
+}
+.markAllAsReadButton {
+    padding-left: calc(var(--grid-unit) * 1px) ;
 }
 .chipContainer {
     display: flex;
