--- a/src/components/general/FilterPane/styles.less
+++ b/src/components/general/FilterPane/styles.less
@@ -23,12 +23,17 @@
         overflow: hidden;
         flex-shrink: 0;
         padding: 0;
+        position: sticky;
+        top:0;
+        background-color: var(--color-white);
+        border-bottom: 1px solid var(--color-black-alt4);
+        z-index: 10;
+        justify-content: space-between;
     }
 
     .collapseExpandButtonContainer {
         width: calc(var(--grid-unit) * 6px);
         height: calc(var(--grid-unit) * 6px);
-        border-bottom: 1px solid var(--color-black-alt4);
         display: flex;
         justify-content: center;
         align-items: center;
