Notifications cards now uses enqueueAsyncOperation to find gradient

--- a/src/components/feedback/NotificationCards/styles.less
+++ b/src/components/feedback/NotificationCards/styles.less
@@ -38,6 +38,7 @@
         .gradientTop{
             opacity: 1;
             background: linear-gradient(180deg, #FFF 23.44%, rgba(255, 255, 255, 0) 100%);
+            z-index: 2;
         }
        
     }
@@ -46,6 +47,8 @@
         .gradientBottom{
             opacity: 1;
             background: linear-gradient(0deg, #FFF 23.44%, rgba(255, 255, 255, 0) 100%);
+            z-index: 2;
+
         }
         
     }
