Code review changes

--- a/src/components/general/NotificationsSideSheet/styles.less
+++ b/src/components/general/NotificationsSideSheet/styles.less
@@ -3,6 +3,12 @@
     flex-direction: column;
     padding: 0 calc(var(--grid-unit) * 2px);
 
+    .noNotificationMessage {
+        display: flex;
+        justify-content: center;
+        font-weight: 500;
+        padding-top: calc(var(--grid-unit) * 2px);
+    }
 
     .notifications{ 
         display: flex;
