--- a/src/components/people/PersonDetail/styles.less
+++ b/src/components/people/PersonDetail/styles.less
@@ -4,6 +4,12 @@
     white-space: nowrap;
     display: flex;
 
+    .detailsContainer {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+    }
+
     .imageContainer {
         display: flex;
         flex-direction: column;
@@ -11,11 +17,30 @@
         padding: 0 calc(var(--grid-unit) * 3px);
     }
 
-    .detailsContainer {
+    .presenceSection {
         display: flex;
-        flex-direction: column;
-        flex: 1;
+        flex-direction: row;
     }
+
+    .presenceUnknown {
+        padding-right: calc(var(--grid-unit) * 1px);
+        color: var(--color-black-alt3);
+    }
+
+    .accountTypeSection {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .iconContainer {
+        display: flex;
+        align-items: center;
+        padding-right: calc(var(--grid-unit) * 1px);
+    }
+}
+
+.personPositions {
+    padding-top: calc(var(--grid-unit) * 1px);
 }
 
 .personName {
