--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -22,6 +22,8 @@
             align-items: center;
             padding: 0 calc(var(--grid-unit) * var(--cell-horizontal-padding-multiplier));
             z-index: 1;
+            width: 100%;
+            height: 100%;
 
             &.isClickable {
                 cursor: pointer;
