--- a/src/components/general/FilterPane/styles.less
+++ b/src/components/general/FilterPane/styles.less
@@ -54,6 +54,7 @@
             h3 {
                 flex-grow: 1;
                 margin: 0;
+                line-height: 16px;
             }
 
             button {
@@ -75,9 +76,10 @@
                 h4 {
                     flex-grow: 1;
                     margin: 0;
-                    white-space: nowrap;
+                    white-space: normal;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    line-height: 16px;
 
                     span {
                         white-space: nowrap;
