Removed text underline on buttons rendered with <a>

--- a/src/components/general/Button/styles/index.less
+++ b/src/components/general/Button/styles/index.less
@@ -12,6 +12,10 @@
     box-sizing: border-box;
     text-decoration: none;
 
+    a {
+        text-decoration: none;
+    }
+
     & + & {
         margin-left: calc(var(--grid-unit) * 1px) !important;
     }
