Added my positions

--- a/src/components/people/PersonPositionCard/styles.less
+++ b/src/components/people/PersonPositionCard/styles.less
@@ -1,5 +1,5 @@
 .container {
-    width: calc(var(--grid-unit) * 40px);
+    max-width: calc(var(--grid-unit) * 40px);
     padding: calc(var(--grid-unit)* 2px);
     box-sizing: border-box;
     display: block;
