Styling updates and PersonPosition model compliance

--- a/src/components/core/Header/components/AccountManagerSideSheet/styles.less
+++ b/src/components/core/Header/components/AccountManagerSideSheet/styles.less
@@ -10,7 +10,7 @@
     }
 
     .personDetails {
-        padding: 0 calc(var(--grid-unit) * 2px);
+        padding: calc(var(--grid-unit) * 1px) calc(var(--grid-unit) * 3px);
     }
 
     .signOutContainer{
