Added quick fact anchor to fusion header icons

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -142,7 +142,7 @@
 
 /* Override the icon button colors */
 .startContainer, .asideContainer {
-    > button > span {
+    > fusion-app-guide-anchor > button > span {
         color: var(--color-black-alt2) !important;
     }
 
