--- a/src/components/data/HangingGarden/styles.less
+++ b/src/components/data/HangingGarden/styles.less
@@ -1,4 +1,11 @@
-.container {
+.container { 
+  display: flex;
+  flex: 1 1 auto; 
+  height: 100%;
+  min-Width: 0; 
+}
+
+.gardenContainer {
   width: 100%;
   height: 100%;
   overflow: auto;
