feat: added button for reasetting filters

--- a/src/components/general/FilterPane/styles.less
+++ b/src/components/general/FilterPane/styles.less
@@ -130,6 +130,10 @@
         .content {
             padding: calc(var(--grid-unit) * 1px);
 
+            .resetButton {
+                text-align: right;
+            }
+
             section {
                 padding-bottom: calc(var(--grid-unit) * 1px);
                 margin-bottom: calc(var(--grid-unit) * 2px);
@@ -199,6 +203,10 @@
 
         .content {
             padding: calc(var(--grid-unit) * 2px);
+
+            .resetButton {
+                text-align: right;
+            }
 
             section {
                 padding-bottom: calc(var(--grid-unit) * 2px);
