Added bookmark select

--- a/src/components/data/PowerBIReport/components/BookmarkManager/components/AllBookmarks/styles.less
+++ b/src/components/data/PowerBIReport/components/BookmarkManager/components/AllBookmarks/styles.less
@@ -5,6 +5,17 @@
     .editInput {
         width: calc(100% - var(--grid-unit) * 12px);
     }
+
+    .bookmarkLink{
+        cursor: pointer;
+        color: var(--color-primary);
+        width: 100%;
+        padding-left: calc(var(--grid-unit) * 1px);
+        
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .menuContainer{ 
