Support context switching

--- a/src/components/data/PowerBIReport/components/BookmarkManager/styles.less
+++ b/src/components/data/PowerBIReport/components/BookmarkManager/styles.less
@@ -4,6 +4,7 @@
     border-right: 1px solid var(--color-black-alt3);
     margin-right: calc(var(--grid-unit) * 2px);
     padding-right: calc(var(--grid-unit) * 1px);
+    width: 100%;
 }
 
 .container {
