--- a/src/components/general/NotificationsSideSheet/styles.less
+++ b/src/components/general/NotificationsSideSheet/styles.less
@@ -1,55 +1,64 @@
-.notificationsContainer {
+ .notificationsContainer {
     display: flex;
-    flex-direction: column;
-    padding: 0 calc(var(--grid-unit) * 2px);
+    flex-direction: column;    
+    height: 100%;
 
-    .noNotificationMessage {
-        display: flex;
-        justify-content: center;
-        font-weight: 500;
-        padding-top: calc(var(--grid-unit) * 2px);
-    }
-
-    .notifications{ 
-        display: flex;
-        flex-direction: column;
-
+    .tabContent {
+        /* height: 100%; */
+        overflow: auto;
+        padding: 0 1rem 1rem 1rem;
+            
+        .noNotificationMessage {
+            display: flex;
+            justify-content: center;
+            font-weight: 500;
+            padding-top: 1rem;
+        }
         .divisionTitle {
-            padding-left: calc(var(--grid-unit) * 1px);
+            padding-left: 0.5rem;
         }
-
-        .division{
-            padding-top: calc(var(--grid-unit) * 2px);
-
-            .dateMarker {
-                width: 100%;
-                display: flex;
-                justify-content: flex-end;
-                padding: calc(var(--grid-unit) * 1px) 0;
-                font-size: 12px;
-                color: var(--color-black-alt2);
-            }
-        }
-       
     }
-    
+
+    .division {
+        padding-bottom: 1rem;
+        
+        .dateMarker {
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            padding: 0.5rem 0;
+            font-size: 12px;
+            color: var(--color-black-alt2);
+        }
+    }   
 }
-.markAllAsReadButton {
-    padding-left: calc(var(--grid-unit) * 1px) ;
+
+.settingsTab {
+    margin-left: auto;
+ }
+
+.settingsContainer {
+    padding: 1rem;
+
+    .sectionHeader {
+       border-bottom: 1px solid var(--color-black-alt4);
+       padding-bottom: 0.5rem;
+    }
 }
-.chipContainer {
+
+.row {
     display: flex;
+    height: 1.5rem;
     align-items: center;
+    padding: 1rem 0 1rem 0;
 }
 
-.notificationWrapper {
-    border-radius: 4px;
-    margin-bottom: calc(var(--grid-unit) * 2px);
-    border-collapse: separate; 
-    border: 1px solid var(--color-black-alt4);
-
-    &.unSeen{
-        border: 1px solid var(--color-primary);
-    }
-    
+.chip {
+    background-color: var(--color-danger);
+    border-radius: 50%;
+    width: 1rem;
+    display: inline;
+    margin: 0.5rem;
+    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+    color: #FFF;
 }
