--- a/src/components/general/SearchableDropdown/styles.less
+++ b/src/components/general/SearchableDropdown/styles.less
@@ -42,3 +42,30 @@
     min-height: calc(var(--grid-unit) * 8px);
     padding: 0 calc(var(--grid-unit) * 2px);
 }
+
+.dropdownContainer{
+    display: flex;
+    flex-direction: column;
+
+    .dropdownContent {
+        background-color: var(--color-black-alt5);
+        border-bottom: 1px solid var(--color-black-alt2);
+        caret-color: var(--color-primary);
+        display: flex;
+        justify-content: space-between;
+        max-height: .grid-unit(7px)[];
+        min-height: .grid-unit(5px)[];
+        align-items: center;
+        padding: 0 1rem 0 1rem;
+        justify-items: center;
+
+        &.focus {
+            border-bottom: 2px solid var(--color-primary);
+            box-shadow: 2px var(--color-primary);
+        }
+    
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
