--- a/src/components/general/TextInput/styles.less
+++ b/src/components/general/TextInput/styles.less
@@ -30,6 +30,10 @@
           cursor: not-allowed;
         }
 
+        &.hideTextInput {
+            cursor: pointer;
+        }
+
         &.focus {
             border-bottom: 1px solid var(--color-primary);
             box-shadow: 0 1px 0 var(--color-primary);
