--- a/src/components/general/NotificationsSideSheet/styles.less
+++ b/src/components/general/NotificationsSideSheet/styles.less
@@ -35,13 +35,42 @@
 
 }
 
-.settingsIcon {
-    padding-left: 0.5rem;
+.settingsPlacement {
+    margin-left: auto;     
+
+    .settingsTab {
+        display: flex;
+        align-items: center;
+
+        .settingsIcon {
+            padding-left: 0.5rem;
+        }
+    }
 }
 
-.settingsTab {
-    margin-left: auto;
- }
+.settingsContainer {
+    padding: 1rem;
+
+    .generalHeader {
+        padding-bottom: 0.5rem;
+    }
+
+    .settingsEmail {
+        padding-top: 1rem;
+        padding-bottom: 0.5rem;
+    }
+}
+
+.selectTitle {
+    padding-right: 0.5rem;
+}
+
+.row {
+    display: flex;
+    height: 1.5rem;
+    align-items: center;
+    padding: 1rem 0 1rem 0;
+}
 
 .notificationWrapper {
     border-radius: 4px;
