--- a/src/components/general/Stepper/styles.less
+++ b/src/components/general/Stepper/styles.less
@@ -1,19 +1,37 @@
 @import '~styles/variables.less';
 
-.stepper {
-    display: grid;
-    grid-template-columns: max-content max-content auto;
-    grid-template-areas: "prev next stepPane";
-    border-bottom: 1px solid var(--color-black-alt3);
-    padding: calc(var(--grid-unit) * 2px) 0;
+.stepperContainter {    
+    display:grid;
 
-    @media (max-width: @mobile-max-width) {
-        grid-template-columns: max-content auto max-content;
-        grid-template-areas: "prev stepPane next";
-        padding: 0;
-        border: none;
+    &.verticalStepperContainer {
+        grid-template-columns: max-content auto;
+        height: 100%;
     }
 
+    .stepper {
+        display: grid;
+        grid-template-columns: max-content max-content auto;
+        grid-template-areas: "prev next stepPane";
+        border-bottom: 1px solid var(--color-black-alt3);
+        padding: calc(var(--grid-unit) * 2px) 0;
+
+        &.verticalStepper {
+            grid-template-columns: max-content max-content 1fr;
+            grid-template-rows:max-content auto;
+            grid-template-areas:
+            "prev next ."
+            "stepPane stepPane stepPane";
+            border-bottom:none;
+            border-right: 1px solid var(--color-black-alt3);
+        }
+        
+        @media (max-width: @mobile-max-width) {
+            grid-template-columns: max-content auto max-content;
+            grid-template-areas: "prev stepPane next";
+            padding: 0;
+            border: none;
+        }
+        
     .prev {
         grid-area: prev;
     }
@@ -41,6 +59,10 @@
         display: flex;
         flex-grow: 1;
         
+        &.verticalSteps{
+            flex-direction: column;
+        }
+
         .step {
             padding: calc(var(--grid-unit) * 1px);
             padding-left: calc(var(--grid-unit) * 2px);
@@ -84,7 +106,7 @@
             &.current {
                 font-weight: 500;
             }
-
+    
             .title {
                 grid-area: title;
                 overflow: hidden;
@@ -99,6 +121,15 @@
                 > .text {
                     display: block;
                 }
+
+                > .text::after {
+                    display: block;
+                    content: attr(title);
+                    font-weight: 500;
+                    height: 0;
+                    overflow: hidden;
+                    visibility: hidden;
+                }
             }
 
                 &.isLastStep {
@@ -111,7 +142,7 @@
                     }
                 }
             }
-
+  
             .badge {
                 grid-area: badge;
                 display: flex;
@@ -143,7 +174,7 @@
             }
         }
     }
-    
+
     .description {
         grid-area: description;
         color: var(--color-black-alt2);
@@ -178,3 +209,17 @@
             display: none;
         }
     }
+
+    .verticalStepperLine {
+        min-width: calc(var(--grid-unit) * 3px);
+        content: " ";
+        flex-grow: 1;
+        height: calc(var(--grid-unit) * 3px);
+        border-left: 1px solid var(--line-color);
+        margin-left: calc(var(--grid-unit) * 1.5px);
+
+        @media (max-width: @mobile-max-width) {
+            display: none;
+        }
+    }
+}
