--- a/src/components/general/NotificationsSideSheet/styles.less
+++ b/src/components/general/NotificationsSideSheet/styles.less
@@ -14,6 +14,10 @@
             padding-top: 1rem;
         }
 
+        .markAsRead {
+            padding-top: 0.5rem;
+        }
+
         .divisionTitle {
             padding-left: 0.5rem;
         }
