Some minor adjustments to the demo. Written out the entire story for the Hanging Garden demo. Need some proofreading still

--- a/src/components/data/HangingGarden/__stories__/GardenDemo/styles.less
+++ b/src/components/data/HangingGarden/__stories__/GardenDemo/styles.less
@@ -1,8 +1,9 @@
 .hanginggardenContainer {
   display: flex;
-  height: 99%;
-  min-width: 100vw;
-  max-width: 100vw;
+  flex: 1 1 auto; 
+  height: 500px;
+  
+  min-width: 0;
 }
 
 .details {
