feat: Navigation links and bigger side sheet

--- a/src/components/general/NavigationDrawer/components/styles.less
+++ b/src/components/general/NavigationDrawer/components/styles.less
@@ -37,6 +37,7 @@
         justify-content: space-between;
         letter-spacing: 0.7;
         font-weight: 600;
+        text-decoration: none;
 
         .linkText {
             width: .grid-unit(27px) [];
