--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -30,7 +30,9 @@
     &.fullscreen {
         --modal-size: calc(100vw - (var(--grid-unit) * 4px));
     }
-
+    &.xxlarge {
+        --modal-size: calc(var(--grid-unit) * 180px);
+    }
     &.xlarge {
         --modal-size: calc(var(--grid-unit) * 120px);
     }
