feat: isTaskOwner prop on PositionCard

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -121,11 +121,12 @@
                 }
             }
 
-            .stateIcon {
+            .stateIcons {
                 position: relative;
-                display: flex;
-                justify-content: center;
                 padding-top: calc(var(--grid-unit) * 0.5px);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
             }
         }
 
