--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -123,10 +123,16 @@
 
             .stateIcons {
                 position: relative;
-                padding-top: calc(var(--grid-unit) * 0.5px);
+                padding-top: calc(var(--grid-unit) * 1px);
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+            }
+
+            .edsIcon > * {
+                height: 16px;
+                width: 16px;
+                color: var(--color-black-alt2);
             }
         }
 
