Feature/position card task owner icon (#1032)
* feat: isTaskOwner prop on PositionCard

* chore: update equinor/fusion package version

* fix: updated stories to reflect new Position props

* fix: isTaskOwner determined by position prop

* chore: added @equinor/fusion-wc-icon

* fix: using assignment_user icon

* fix: removed unused import

* fix: removed isTaskOwner from PositionCardProps

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -121,11 +121,18 @@
                 }
             }
 
-            .stateIcon {
+            .stateIcons {
                 position: relative;
+                padding-top: calc(var(--grid-unit) * 1px);
                 display: flex;
-                justify-content: center;
-                padding-top: calc(var(--grid-unit) * 0.5px);
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .edsIcon > * {
+                height: 16px;
+                width: 16px;
+                color: var(--color-black-alt2);
             }
         }
 
