--- a/src/components/general/BookmarksManager/BookmarkSideSheet/AllBookmarks/Bookmark/styles.less
+++ b/src/components/general/BookmarksManager/BookmarkSideSheet/AllBookmarks/Bookmark/styles.less
@@ -1,15 +1,84 @@
-.bookmarkContainer {
+@import '~styles/mixins.less';
+.container {
     display: flex;
+    flex-direction: column;
     align-items: center;
-
-    .bookmarkLink {
-        cursor: pointer;
-        color: var(--color-primary);
+    width: 100%;
+    .accordionContainer {
+        display: flex;
+        flex-direction: row;
         width: 100%;
-        padding-left: calc(var(--grid-unit) * 1px);
+        align-items: center;
+    }
+    .content {
+        width: 80%;
+        .link {
+            cursor: pointer;
+            color: var(--color-primary);
 
-        &:hover {
-            text-decoration: underline;
+            padding-left: calc(var(--grid-unit) * 1px);
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
+    .detailsContainer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding-left: calc(var(--grid-unit) * 13px);
+
+        .description {
+            width: 80%;
+        }
+        .ownerContainer {
+            display: flex;
+            flex-direction: column;
+            padding-top: calc(var(--grid-unit) * 1px);
+
+            .createdBy {
+                color: var(--color-black-alt3);
+                font-size: 14px;
+            }
+            .personDetailsContainer {
+                display: flex;
+                flex-direction: row;
+                padding-top: calc(var(--grid-unit) * 1px);
+                column-gap: calc(var(--grid-unit) * 1px);
+                .personDetails {
+                    display: flex;
+                    flex-direction: column;
+                    .creator {
+                    }
+                    .creatorEmail {
+                        color: var(--color-primary);
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+    }
+
+    .sharedBookmark {
+        height: calc(var(--grid-unit) * 6px);
+        width: calc(var(--grid-unit) * 6px);
+        display: flex;
+
+        .icon {
+            height: calc(var(--grid-unit) * 6px);
+            width: calc(var(--grid-unit) * 6px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            &:hover {
+                background-color: var(--color-primary-alt4);
+            }
+        }
+    }
+}
+
+.viewMore {
+    cursor: pointer;
 }
