--- a/src/components/core/ContextSelector/styles.less
+++ b/src/components/core/ContextSelector/styles.less
@@ -17,18 +17,14 @@
         height: calc(var(--grid-unit) * var(--height-multiplier));
         margin-left: calc(var(--grid-unit) * 1px);
         font-size: var(--font-size);
-
-        &::placeholder {
-            color: var(--color-primary-accent);
+        &.overlay{
+            user-select: none;
+            cursor: pointer;
         }
+    }
 
-        &:focus {
-            border-bottom-color: var(--color-primary);
-
-            &::placeholder {
-                color: var(--color-black-alt3);
-            }
-        }
+    input.searchInput:focus{
+        border-bottom-color: var(--color-primary);
     }
 
     &.comfortable {
