feat: add option to pass through extra content for the header

--- a/src/components/general/SideSheet/Standard/styles.less
+++ b/src/components/general/SideSheet/Standard/styles.less
@@ -95,6 +95,10 @@
         flex-grow: 1;
     }
 
+    .headerContent {
+        margin-right: calc(var(--grid-unit) * 3px);
+    }
+
     &.isCollapsed {
         width: .grid-unit(6px) [];
 
