fix: added flex container style

--- a/src/components/core/ContextSelector/styles.less
+++ b/src/components/core/ContextSelector/styles.less
@@ -1,6 +1,8 @@
-.container {
+.flexContainer {
     display: flex;
     align-items: center;
+}
+.component {
     width: calc(var(--grid-unit) * 65px);
 
     .searchInput {
