--- a/src/components/core/ContextSelector/styles.less
+++ b/src/components/core/ContextSelector/styles.less
@@ -1,6 +1,8 @@
-.container {
+.flexContainer {
     display: flex;
     align-items: center;
+}
+.component {
     width: calc(var(--grid-unit) * 65px);
 
     .searchInput {
@@ -17,18 +19,14 @@
         height: calc(var(--grid-unit) * var(--height-multiplier));
         margin-left: calc(var(--grid-unit) * 1px);
         font-size: var(--font-size);
-
-        &::placeholder {
-            color: var(--color-primary-accent);
+        &.overlay{
+            user-select: none;
+            cursor: pointer;
         }
+    }
 
-        &:focus {
-            border-bottom-color: var(--color-primary);
-
-            &::placeholder {
-                color: var(--color-black-alt3);
-            }
-        }
+    input.searchInput:focus{
+        border-bottom-color: var(--color-primary);
     }
 
     &.comfortable {
