feat: darker linked positions lines

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -55,7 +55,7 @@
     }
 
     &.isLinked {
-        border: 1px dashed var(--color-black-alt3);
+        border: 1px dashed var(--color-primary-accent);
     }
 
     .rotationInstances {
