feat: orch chart lines px and eds colors

--- a/src/components/org/OrgChart/components/styles.less
+++ b/src/components/org/OrgChart/components/styles.less
@@ -11,14 +11,14 @@
 }
 
 .link {
-    stroke: #b9b9b8;
-    stroke-width: 1px;
+    stroke: #dcdcdc; // EDS Design Token Interactive/Disabled/Border 🎨 Grey 20
+    stroke-width: 2px;
     fill: none;
     shape-rendering: crispEdges;
 
     &.isLinked {
-        stroke-dasharray: 3;
-        stroke: var(--color-primary-accent);
+        stroke-dasharray: 5;
+        stroke: #bebebe; // EDS Design Token Interactive/Disabled/Text 🎨 Grey 30
     }
 }
 
