--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -5,19 +5,19 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-white);
-    border: 1px solid var(--color-black-alt4);
+    border: 2px solid var(--color-black-alt4);
     border-radius: 4px;
     position: relative;
     transition: box-shadow 0.15s;
 
     &.futurePosition {
         background-color: #eefcf2;
-        border: 1px solid var(--color-green);
+        border: 2px solid var(--color-green);
     }
 
     &.pastPosition {
         background-color: #e6e6e6;
-        border: 1px solid var(--color-black-alt3);
+        border: 2px solid var(--color-black-alt3);
     }
 
     &.isClickable {
@@ -55,7 +55,7 @@
     }
 
     &.isLinked {
-        border: 1px dashed var(--color-primary-accent);
+        border: 2px dashed #bebebe; // EDS Design Token Interactive/Disabled/Text 🎨 Grey 30
     }
 
     .rotationInstances {
