--- a/src/components/org/ReportingPath/components/styles.less
+++ b/src/components/org/ReportingPath/components/styles.less
@@ -1,11 +1,12 @@
 .link {
-    stroke: #b9b9b8;
-    stroke-width: 1px;
+    stroke: #dcdcdc; // EDS Design Token Interactive/Disabled/Border 🎨 Grey 20
+    stroke-width: 2px;
     fill: none;
     shape-rendering: crispEdges;
 
     &.isLinked {
-        stroke-dasharray: 3;
+        stroke-dasharray: 5;
+        stroke: #bebebe; // EDS Design Token Interactive/Disabled/Text 🎨 Grey 30
     }
 }
 .card,
