custom header in searchableDropdown

--- a/src/components/general/SearchableDropdown/styles.less
+++ b/src/components/general/SearchableDropdown/styles.less
@@ -35,6 +35,12 @@
     }
 }
 
+.header {
+    display: flex;
+    flex-direction: column;
+    width: '100%';
+}
+
 .noResultsContainer {
     display: flex;
     align-items: center;
