fix: allow zero on child count when uniquePersons
Also style changes on childPositionCount class to improve readability when count is decimal number

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -190,6 +190,8 @@
                 align-items: center;
                 justify-content: center;
                 font-size: var(--small-section-font-size);
+                letter-spacing: 1px;
+                font-feature-settings: 'tnum' on, 'lnum' on;
             }
 
             .expandButton {
