--- a/src/components/general/Stepper/styles.less
+++ b/src/components/general/Stepper/styles.less
@@ -1,6 +1,6 @@
 @import '~styles/variables.less';
 
-.stepperContainter {
+.stepperContainer {
     display: grid;
 
     &.verticalStepperContainer {
