feat: ongoing work Auxiliary cards

--- a/src/components/org/OrgChart/components/styles.less
+++ b/src/components/org/OrgChart/components/styles.less
@@ -20,6 +20,10 @@
         stroke-dasharray: 5;
         stroke: #bebebe; // EDS Design Token Interactive/Disabled/Text 🎨 Grey 30
     }
+
+    &.isDisconnected {
+        stroke: none;
+    }
 }
 
 .card,
